# Networking

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Decomposition.md  Dockerfile  Dockerfile.base  README.md  clean_build_dirs.sh  compile.sh  compile_docker_local.sh  conanLog.txt  conanProfileDebug  conanProfileRelease  conanfile.txt  format_all_files.sh  main.cpp  main_openssl.cpp  run_networking.sh  update_base_image.sh
.github/workflows/: build_base_image.yml  build_project.yml
NetworkLib/: CMakeLists.txt
NetworkLib/include/: manager.h
NetworkLib/src/: manager.cpp
client/: CMakeLists.txt
client/include/: TLSClient.h
client/src/: TLSClient.cpp  main_client.cpp
conanProfiles/: conanProfileDebug_Linux  conanProfileDebug_Win  conanProfileRelease_Linux  conanProfileRelease_Win
devops/cmake/: CMakeHelpers.cmake
devops/githooks/: install_git_hooks.sh
devops/misc/: format_all_files.sh
docker/: Dockerfile.base  Dockerfile.build  Dockerfile.run
docs/: tls.docx  tls_workflow.md
networklib/: CMakeLists.txt
networklib/crypto/include/: AESCrypto.h  AESCustom.h  ECDHECrypto.h  RSACrypto.h  RSACustom.h  RSAPublicKey.h  SHA256Custom.h  UtilsCrypto.h
networklib/crypto/src/: AESCrypto.cpp  AESCustom.cpp  ECDHECrypto.cpp  RSACrypto.cpp  RSACustom.cpp  SHA256Custom.cpp
networklib/datatypes/include/: iobytes.h
networklib/datatypes/src/: iobytes.cpp
networklib/include/: manager.h
networklib/network/include/: HandshakeManager.h  HandshakeMessages.h  KeySchedule.h  TLSRecordLayer.h  UtilsNetwork.h
networklib/network/src/: HandshakeManager.cpp  HandshakeMessages.cpp  KeySchedule.cpp  TLSRecordLayer.cpp  manager.cpp
networklib/tls/include/: HandshakeContext.h  SessionCipher.h
networklib/tls/src/: HandshakeContext.cpp  SessionCipher.cpp
networklib/utils/include/: Utils.h  UtilsCrypto.h  UtilsNetwork.h
server/: CMakeLists.txt
server/include/: TLSServer.h
server/src/: TLSServer.cpp  main_server.cpp
tests/: CMakeLists.txt
tests/src/: main_test.cpp  test_AESCrypto.cpp  test_ECDHECrypto.cpp  test_RSACrypto.cpp  test_SHACrypto.cpp  test_Utils.cpp  test_UtilsCrypto.cpp  test_UtilsNetwork.cpp
